--- a/index.html
+++ b/index.html
@@ -814,13 +814,13 @@
                 name: "EssentialsX",
                 author: "drtshock",
                 description: "提供服务器基础功能，包括传送、家园、经济等基础功能，是大多数服务器必备的核心插件。",
-                version: "1.18-1.20",
+                version: "1.8-1.21",
                 tags: ["基础功能", "经济", "传送", "管理"],
                 category: ["admin", "economy"],
-                downloads: 12500000,
+                downloads: 5579837,
                 rating: 4.8,
                 reviews: 5420,
-                lastUpdated: "2023-10-15",
+                lastUpdated: "2025-08-04",
                 dependencies: ["Vault"],
                 link: "https://www.spigotmc.org/resources/essentialsx.9089/"
             },
@@ -829,13 +829,13 @@
                 name: "WorldEdit",
                 author: "sk89q",
                 description: "强大的世界编辑工具，允许快速修改和建造大型结构，是建筑服务器的必备工具。",
-                version: "1.12-1.20",
+                version: "1.12-1.21",
                 tags: ["建筑", "地形", "编辑", "管理"],
                 category: ["world", "admin"],
-                downloads: 8500000,
+                downloads: 23531395,
                 rating: 4.9,
                 reviews: 3820,
-                lastUpdated: "2023-09-22",
+                lastUpdated: "2025-07-19",
                 dependencies: [],
                 link: "https://dev.bukkit.org/projects/worldedit"
             },
@@ -844,13 +844,13 @@
                 name: "Vault",
                 author: "MilkBowl",
                 description: "经济系统兼容插件，为不同经济插件提供统一API接口，是经济系统的核心依赖。",
-                version: "1.7-1.20",
+                version: "1.13-1.21",
                 tags: ["经济", "API", "兼容"],
                 category: ["economy", "api"],
-                downloads: 7800000,
+                downloads: 3188890,
                 rating: 4.7,
                 reviews: 2950,
-                lastUpdated: "2023-08-10",
+                lastUpdated: "2025-07-18",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/vault.34315/"
             },
@@ -859,13 +859,13 @@
                 name: "Citizens",
                 author: "fullwall",
                 description: "NPC创建和管理插件，可以创建自定义NPC并赋予其各种行为，适合RPG服务器。",
-                version: "1.14-1.20",
+                version: "1.14-1.21",
                 tags: ["NPC", "角色", "任务", "RPG"],
                 category: ["rpg", "gameplay"],
-                downloads: 6500000,
-                rating: 4.6,
+                downloads: 27213,
+                rating: 4.0,
                 reviews: 2780,
-                lastUpdated: "2023-11-05",
+                lastUpdated: "2025-08-12",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/citizens.13811/"
             },
@@ -874,13 +874,13 @@
                 name: "WorldGuard",
                 author: "sk89q",
                 description: "区域保护插件，可以定义区域并设置各种保护标志，防止玩家破坏或建造。",
-                version: "1.8-1.20",
+                version: "1.8-1.21",
                 tags: ["保护", "领地", "管理"],
                 category: ["protection", "admin"],
-                downloads: 7200000,
+                downloads: 9455418,
                 rating: 4.8,
                 reviews: 3420,
-                lastUpdated: "2023-10-28",
+                lastUpdated: "2025-07-12",
                 dependencies: ["WorldEdit"],
                 link: "https://dev.bukkit.org/projects/worldguard"
             },
@@ -889,13 +889,13 @@
                 name: "McMMO",
                 author: "nossr50",
                 description: "RPG技能系统，玩家可以通过各种活动提升技能等级，获得特殊能力和奖励。",
-                version: "1.16-1.20",
+                version: "1.17-1.21",
                 tags: ["RPG", "技能", "等级", "游戏玩法"],
                 category: ["rpg", "gameplay"],
                 downloads: 6800000,
                 rating: 4.5,
                 reviews: 4120,
-                lastUpdated: "2023-09-15",
+                lastUpdated: "2025-08-04",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/mcmmo.24461/"
             },
@@ -904,13 +904,13 @@
                 name: "LuckPerms",
                 author: "Luck",
                 description: "权限管理插件，提供强大的权限组和权限设置功能，支持多种数据库后端。",
-                version: "1.8-1.20",
+                version: "1.7-1.21",
                 tags: ["权限", "管理", "安全"],
                 category: ["admin", "utility"],
-                downloads: 5500000,
+                downloads: 7620099,
                 rating: 4.9,
                 reviews: 3250,
-                lastUpdated: "2023-11-12",
+                lastUpdated: "2025-05-26",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/luckperms.28140/"
             },
@@ -919,13 +919,13 @@
                 name: "ItemsAdder",
                 author: "LoneDev",
                 description: "自定义物品和资源包插件，可以创建自定义方块、物品和模型，无需修改客户端。",
-                version: "1.16-1.20",
+                version: "1.16-1.21",
                 tags: ["自定义", "物品", "资源包", "装饰"],
                 category: ["decoration", "gameplay"],
-                downloads: 3200000,
+                downloads: 15549,
                 rating: 4.8,
                 reviews: 1850,
-                lastUpdated: "2023-11-08",
+                lastUpdated: "2025-07-22",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/itemsadder.73355/"
             },
@@ -934,13 +934,13 @@
                 name: "PlaceholderAPI",
                 author: "ExtendedClip",
                 description: "占位符API，允许其他插件创建和使用占位符，极大增强插件之间的兼容性。",
-                version: "1.8-1.20",
+                version: "1.8-1.21",
                 tags: ["API", "兼容", "实用工具"],
                 category: ["api", "utility"],
-                downloads: 6100000,
+                downloads: 1923403,
                 rating: 4.7,
                 reviews: 2450,
-                lastUpdated: "2023-10-20",
+                lastUpdated: "2024-05-21",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/placeholderapi.6245/"
             },
@@ -949,13 +949,13 @@
                 name: "ProtocolLib",
                 author: "dmulloy2",
                 description: "允许修改Minecraft协议的低级库，许多高级插件依赖此库实现复杂功能。",
-                version: "1.8-1.20",
+                version: "1.8-1.21",
                 tags: ["库", "协议", "开发"],
                 category: ["api", "utility"],
-                downloads: 4800000,
+                downloads: 2929030,
                 rating: 4.6,
                 reviews: 1620,
-                lastUpdated: "2023-11-01",
+                lastUpdated: "2025-08-09",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/protocollib.1997/"
             },
@@ -967,10 +967,10 @@
                 version: "1.8-1.20",
                 tags: ["全息", "显示", "装饰"],
                 category: ["decoration", "utility"],
-                downloads: 3700000,
+                downloads: 75097,
                 rating: 4.4,
                 reviews: 1780,
-                lastUpdated: "2023-09-30",
+                lastUpdated: "2024-01-27",
                 dependencies: [],
                 link: "https://dev.bukkit.org/projects/holographic-displays"
             },
@@ -982,10 +982,10 @@
                 version: "1.16-1.20",
                 tags: ["附魔", "战斗", "游戏玩法"],
                 category: ["gameplay", "rpg"],
-                downloads: 2100000,
+                downloads: 30378,
                 rating: 4.3,
                 reviews: 1250,
-                lastUpdated: "2023-10-05",
+                lastUpdated: "2025-08-25",
                 dependencies: [],
                 link: "https://www.spigotmc.org/resources/advancedenchantments.86927/"
             }
