--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Minecraft插件导航 - 发现最佳服务器插件</title>
     <link rel="stylesheet" href="https://fontawesome.ihwx.cn/6.4.0/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="image.png" type="image/png">
     <style>
         :root {
             --primary: #ff6b6b;
