--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,22 @@
             dependencies: [],
             paymentType: "paid",
             link: "https://www.spigotmc.org/resources/advancedenchantments.86927/"
+        },
+        {
+            id: 13,
+            name: "Spark",
+            author: "Luck",
+            description: "添加多种自定义附魔效果，增强游戏战斗和工具系统，完全可配置。",
+            version: "1.8-1.21",
+            tags: ["性能", "管理", "保护", "资源监视"],
+            category: ["admin", "utility"],
+            downloads: 239636,
+            rating: 4.9,
+            reviews: 18450,
+            lastUpdated: "2024-12-02",
+            dependencies: [],
+            paymentType: "free",
+            link: "https://spark.lucko.me/download"
         }
     ];
 
