--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
             id: 13,
             name: "Spark",
             author: "Luck",
-            description: "添加多种自定义附魔效果，增强游戏战斗和工具系统，完全可配置。",
+            description: "高效管理服务器性能资源，实时监视后台资源占用，检测服务器性能问题。",
             version: "1.8-1.21",
             tags: ["性能", "管理", "保护", "资源监视"],
             category: ["admin", "utility"],
