--- a/index.html
+++ b/index.html
@@ -1236,6 +1236,102 @@
             dependencies: [],
             paymentType: "free",
             link: "https://spark.lucko.me/download"
+        },
+        {
+            id: 14,
+            name: "ViaVersion",
+            author: "FormallyMyles",
+            description: "允许玩家使用比服务器更新的MC版本进入你的服务器，增强服务器留人能力，助你收获更多玩家！",
+            version: "1.8-1.21",
+            tags: ["兼容", "管理", "跨版本"],
+            category: ["admin", "utility"],
+            downloads: 7827940,
+            rating: 4.8,
+            reviews: 10270,
+            lastUpdated: "2025-08-06",
+            dependencies: [],
+            paymentType: "free",
+            link: "https://hangar.papermc.io/ViaVersion/ViaVersion"
+        },
+        {
+            id: 15,
+            name: "ViaBackwards",
+            author: "kennytv",
+            description: "ViaVersion的附属插件，允许玩家使用比服务器更旧的MC版本进入你的服务器。",
+            version: "1.10-1.21",
+            tags: ["兼容", "管理", "跨版本"],
+            category: ["admin", "utility"],
+            downloads: 4610736,
+            rating: 4.8,
+            reviews: 1460,
+            lastUpdated: "2024-06-23",
+            dependencies: ["ViaVersion"],
+            paymentType: "free",
+            link: "https://hangar.papermc.io/ViaVersion/ViaBackwards"
+        },
+        {
+            id: 16,
+            name: "ViaRewind",
+            author: "EnZaXD",
+            description: "ViaVersion的附属插件，允许玩家使用1.7.x和1.8.x的MC版本进入你的服务器。",
+            version: "1.7-1.20",
+            tags: ["兼容", "管理", "跨版本"],
+            category: ["admin", "utility"],
+            downloads: 1216329,
+            rating: 4.5,
+            reviews: 1050,
+            lastUpdated: "2024-12-07",
+            dependencies: ["ViaVersion"],
+            paymentType: "free",
+            link: "https://hangar.papermc.io/ViaVersion/ViaRewind"
+        },
+        {
+            id: 17,
+            name: "ViaRewindLegacySupport",
+            author: "EnZaXD",
+            description: "ViaRewind的附属插件，修复了ViaRewind插件上的一些BUG。",
+            version: "1.7-1.20",
+            tags: ["兼容", "管理", "跨版本"],
+            category: ["admin", "utility"],
+            downloads: 50037,
+            rating: 4.5,
+            reviews: 896,
+            lastUpdated: "2023-10-27",
+            dependencies: ["ViaVersion", "ViaRewind"],
+            paymentType: "free",
+            link: "https://hangar.papermc.io/ViaVersion/ViaRewindLegacySupport"
+        },
+        {
+            id: 18,
+            name: "Geyser",
+            author: "GeyserMC",
+            description: "一种桥接/代理插件，允许玩家使用基岩版客户端登录你的Java版服务器，实现跨端互通。",
+            version: "1.13-1.21",
+            tags: ["兼容", "管理", "代理"],
+            category: ["admin", "utility"],
+            downloads: 1102526,
+            rating: 4.9,
+            reviews: 4025,
+            lastUpdated: "2025-08-23",
+            dependencies: ["ViaVersion"],
+            paymentType: "free",
+            link: "https://geysermc.org/download?project=geyser"
+        },
+        {
+            id: 19,
+            name: "Floodgate",
+            author: "GeyserMC",
+            description: "Geyser的附属，一种混合模式插件，用于允许从Geyser连接到在线（正版）服务器。",
+            version: "1.8-1.21",
+            tags: ["兼容", "管理", "代理"],
+            category: ["admin", "utility"],
+            downloads: 285421,
+            rating: 4.0,
+            reviews: 1024,
+            lastUpdated: "2025-07-22",
+            dependencies: ["Geyser"],
+            paymentType: "free",
+            link: "https://geysermc.org/download?project=floodgate"
         }
     ];
 
