--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
             description: "一种桥接/代理插件，允许玩家使用基岩版客户端登录你的Java版服务器，实现跨端互通。",
             version: "1.13-1.21",
             tags: ["兼容", "管理", "代理"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 1102526,
             rating: 4.9,
             reviews: 4025,
@@ -1324,7 +1324,7 @@
             description: "Geyser的附属，一种混合模式插件，用于允许从Geyser连接到在线（正版）服务器。",
             version: "1.8-1.21",
             tags: ["兼容", "管理", "代理"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 285421,
             rating: 4.0,
             reviews: 1024,
