--- a/index.html
+++ b/index.html
@@ -1332,6 +1332,38 @@
             dependencies: ["Geyser"],
             paymentType: "free",
             link: "https://geysermc.org/download?project=floodgate"
+        },
+        {
+            id: 20,
+            name: "Chunky",
+            author: "pop4959",
+            description: "预加载区块插件，可以预先生成服务器地图的区块，以减少加载区块所需要的性能负担。",
+            version: "1.13-1.21",
+            tags: ["兼容", "管理", "代理"],
+            category: ["admin"],
+            downloads: 439060,
+            rating: 4.4,
+            reviews: 1245,
+            lastUpdated: "2025-06-21",
+            dependencies: [],
+            paymentType: "free",
+            link: "https://modrinth.com/plugin/chunky"
+        },
+        {
+            id: 21,
+            name: "CoreProtect",
+            author: "Intelli",
+            description: "一种快速、高效的数据记录和防熊工具，可以快速回滚并恢复任意程度的破坏行为。",
+            version: "1.14-1.21",
+            tags: ["工具", "管理", "代理"],
+            category: ["protection", "admin"],
+            downloads: 237530,
+            rating: 4.9,
+            reviews: 6351,
+            lastUpdated: "2025-08-09",
+            dependencies: [],
+            paymentType: "free",
+            link: "https://modrinth.com/plugin/coreprotect"
         }
     ];
 
