--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
             description: "占位符API，允许其他插件创建和使用占位符，极大增强插件之间的兼容性。",
             version: "1.8-1.21",
             tags: ["API", "兼容", "实用工具"],
-            category: ["api", "utility"],
+            category: ["api"],
             downloads: 1923403,
             rating: 4.7,
             reviews: 2450,
@@ -1180,7 +1180,7 @@
             description: "允许修改Minecraft协议的低级库，许多高级插件依赖此库实现复杂功能。",
             version: "1.8-1.21",
             tags: ["库", "协议", "开发"],
-            category: ["api", "utility"],
+            category: ["api"],
             downloads: 2929030,
             rating: 4.6,
             reviews: 1620,
@@ -1244,7 +1244,7 @@
             description: "允许玩家使用比服务器更新的MC版本进入你的服务器，增强服务器留人能力，助你收获更多玩家！",
             version: "1.8-1.21",
             tags: ["兼容", "管理", "跨版本"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 7827940,
             rating: 4.8,
             reviews: 10270,
@@ -1260,7 +1260,7 @@
             description: "ViaVersion的附属插件，允许玩家使用比服务器更旧的MC版本进入你的服务器。",
             version: "1.10-1.21",
             tags: ["兼容", "管理", "跨版本"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 4610736,
             rating: 4.8,
             reviews: 1460,
@@ -1276,7 +1276,7 @@
             description: "ViaVersion的附属插件，允许玩家使用1.7.x和1.8.x的MC版本进入你的服务器。",
             version: "1.7-1.20",
             tags: ["兼容", "管理", "跨版本"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 1216329,
             rating: 4.5,
             reviews: 1050,
@@ -1292,7 +1292,7 @@
             description: "ViaRewind的附属插件，修复了ViaRewind插件上的一些BUG。",
             version: "1.7-1.20",
             tags: ["兼容", "管理", "跨版本"],
-            category: ["admin", "utility"],
+            category: ["admin"],
             downloads: 50037,
             rating: 4.5,
             reviews: 896,
@@ -1339,8 +1339,8 @@
             author: "pop4959",
             description: "预加载区块插件，可以预先生成服务器地图的区块，以减少加载区块所需要的性能负担。",
             version: "1.13-1.21",
-            tags: ["兼容", "管理", "代理"],
-            category: ["admin"],
+            tags: ["地形", "管理", "预加载"],
+            category: ["admin", "world", "utility"],
             downloads: 439060,
             rating: 4.4,
             reviews: 1245,
@@ -1356,7 +1356,7 @@
             description: "一种快速、高效的数据记录和防熊工具，可以快速回滚并恢复任意程度的破坏行为。",
             version: "1.14-1.21",
             tags: ["工具", "管理", "代理"],
-            category: ["protection", "admin"],
+            category: ["protection", "admin", "utility"],
             downloads: 237530,
             rating: 4.9,
             reviews: 6351,
