--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
                 <a href="https://github.com/Kauo7420/Kauo7420" class="contact-link" target="_blank">
                     <i class="fa-brands fa-github"></i> GitHub
                 </a>
-            </div>
-
-            <div class="tip-container">
                 <button class="tip-button" id="tipButton">
                     <i class="fa-solid fa-lightbulb"></i> 小提示
                 </button>
                 <div class="tip-popup" id="tipPopup">
                     <div class="tip-title">使用技巧</div>
                     <div class="tip-content" id="tipContent">提示内容加载中...</div>
+                </div>                
+                <div id="darkModeIndicator" class="dark-mode-indicator" title="当前颜色模式">
+                    <i class="fas fa-sun light-icon"></i>
+                    <i class="fas fa-moon dark-icon"></i>
                 </div>
             </div>
         </div>
