fix: 修复加载页面深色模式颜色，卡片关闭图标颜色，颜色模式支持点击切换

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="tip-title">使用技巧</div>
                     <div class="tip-content" id="tipContent">提示内容加载中...</div>
                 </div>                
-                <div id="darkModeIndicator" class="dark-mode-indicator" title="当前颜色模式">
+                <div id="darkModeIndicator" class="dark-mode-indicator" title="颜色模式">
                     <i class="fas fa-sun light-icon"></i>
                     <i class="fas fa-moon dark-icon"></i>
                 </div>
